--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p></p>
 <a href="www.innovacien-org"> Como hipervínculo </a>
 
-<h2> o marcos para visualizar contenidos de otras ubicacioens web </h2>
+<h2> o marcos para visualizar contenidos de otras ubicaciones web </h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lp9EuspHXok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
