--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>Podemos introducir información de todo tipo</h2>
 <img src="https://media2.giphy.com/media/vQqeT3AYg8S5O/giphy.gif?cid=790b76115cfa7fa17548442e51399fef&rid=giphy.gif" alt="no estoy"
 <p></p>
-<a href="www.innovacien-org"> Como hipervínculo </a>
+<a href="www.innovacien.org"> Como hipervínculo </a>
 
 <h2> o marcos para visualizar contenidos de otras ubicaciones web </h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lp9EuspHXok" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
